--- a/installer/manifests/keptn/templates/core.yaml
+++ b/installer/manifests/keptn/templates/core.yaml
@@ -97,30 +97,10 @@ spec:
     spec:
       {{- include "keptn.bridge.pod-security-context" . | nindent 6 }}
       initContainers:
-        - name: wait-for-nats
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "keptn-nats"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-keptn-mongo
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "keptn-mongo"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-mongodb-datastore
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "mongodb-datastore"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-shipyard-controller
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "shipyard-controller"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
+        {{- include "keptn.initContainers.wait-for-nats" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-keptn-mongo" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-mongodb-datastore" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-shipyard-controller" . | nindent 8 }}
       containers:
         - name: bridge
           image: {{ include "keptn.common.images.image" ( dict "imageRoot" .Values.bridge.image "global" .Values.global.keptn "defaultTag" .Chart.AppVersion) | quote }}
@@ -175,7 +155,7 @@ spec:
             - name: TRUST_PROXY
               value: "{{ .Values.bridge.oauth.trustProxy }}"
             - name: MONGODB_HOST
-              value: '{{ .Release.Name }}-{{ .Values.mongo.service.nameOverride }}:{{ .Values.mongo.service.ports.mongodb }}'
+              value: '{{ .Release.Name }}-{{ .Values.mongo.service.nameOverride }}:{{ .Values.mongo.service.port }}'
             - name: MONGODB_USER
               valueFrom:
                 secretKeyRef:
