--- a/installer/manifests/keptn/templates/statistics-service.yaml
+++ b/installer/manifests/keptn/templates/statistics-service.yaml
@@ -20,30 +20,10 @@ spec:
       {{- include "keptn.common.pod-security-context" . | nindent 6 }}
       serviceAccountName: keptn-default
       initContainers:
-        - name: wait-for-nats
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "keptn-nats"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-keptn-mongo
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "keptn-mongo"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-mongodb-datastore
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "mongodb-datastore"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
-        - name: wait-for-shipyard-controller
-          image: busybox:1.35.0
-          env:
-          - name: "ENDPOINT"
-            value: "shipyard-controller"
-          command: ['sh', '-c', 'until nslookup $ENDPOINT; do echo waiting for $ENDPOINT; sleep 2; done;']
+        {{- include "keptn.initContainers.wait-for-nats" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-keptn-mongo" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-mongodb-datastore" . | nindent 8 }}
+        {{- include "keptn.initContainers.wait-for-shipyard-controller" . | nindent 8 }}
       containers:
         - name: statistics-service
           image: {{ include "keptn.common.images.image" ( dict "imageRoot" .Values.statisticsService.image "global" .Values.global.keptn "defaultTag" .Chart.AppVersion) | quote }}
@@ -66,7 +46,7 @@ spec:
             - name: NEXT_GEN_EVENTS
               value: 'true'
             - name: MONGODB_HOST
-              value: '{{ .Release.Name }}-{{ .Values.mongo.service.nameOverride }}:{{ .Values.mongo.service.ports.mongodb }}'
+              value: '{{ .Release.Name }}-{{ .Values.mongo.service.nameOverride }}:{{ .Values.mongo.service.port }}'
             - name: MONGODB_USER
               valueFrom:
                 secretKeyRef:
